Created attachment 104466 [details] Shape followed by SDT Steps to reproduce : 1] Open attached file in LO 2] Perform save_as to DOCX 3] Open saved file in MS Office-2010 Current behavior : File gets corrupt after Roundtrip. Expected behavior : File should get open on MS Office-2010 without corruption.
Pallavi Jadhav committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=8b9988163c0c0d158fc2d9f5272695ccfec92237 fdo#82492 : DOCX: Corruption: File was getting corrupt fafter RT The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Fix applied + Unit test -> RESOLVED FIXED