fdo#82492 : DOCX: Corruption: File was getting corrupt fafter RT

Issue :
	- In issue file there were two runs(first run=SDT, second run=Shape).
	- These two runs were consecutive(no text/space/tab was there in between two runs).
	- Due to such scenario, "SdtEndBefore" was not getting set on Shape.
	- Hence at Export EndSdtBlock() was getting called from EndParagraph().
	  Due to this SDT was not getting end after first run.
	  In order to end SDT after run, EndSdtBlock() should get called from EndRun()
	  (as in Original file)

	Implementation :
	- Set "SdtEndBefore" on Shape in DomainMapper_Impl::PushShapeContext()
	- Retrieved same property at export.
	- Added export unit test case.

	Note :
	Added common functions at Import and Export with reference to
	https://gerrit.libreoffice.org/#/c/10827/

Conflicts:
	sw/source/filter/ww8/docxattributeoutput.cxx
Reviewed on:
	https://gerrit.libreoffice.org/10912

Change-Id: I357d77cd179c83b8ae976db331ee46c8993b6cb8