writerfilter/source/dmapper/DomainMapper_Impl.hxx
@@ -824,6 +824,9 @@ public:
     /// If the document needs to split paragraph.
     bool m_bIsSplitPara;
 
+    /// Check if "SdtEndBefore" property is set
+    bool IsSdtEndBefore();
+
 private:
     void PushPageHeaderFooter(bool bHeader, SectionPropertyMap::PageType eType);
     std::vector<css::uno::Reference< css::drawing::XShape > > m_vTextFramesForChaining ;
